deploy/overlays/env04/env01/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-webapp-color
  labels:
    name: ingress-webapp-color
spec:
  rules:
  - host: webapp-color-env04.rancher.localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp-color
            port:
              number: 8080
